[package]
name = "crypto2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.18" # Note this is a different library than capnp*c*
openssl = { version = "0.10"}

[build-dependencies]
capnpc = "0.18"

[lib]
name = "cachain"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
