[package]
name = "crypto2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.18" # Note this is a different library than capnp*c*
openssl = { version = "0.10"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "=0.22.0-alpha.4", default-features = false }
tokio-rustls = "0.25.0-alpha.2"
webpki = { package = "rustls-webpki", version = "=0.102.0-alpha.6", features = ["alloc", "std"] }
clap = { version = "4.4.10", features = ["derive"] }

[build-dependencies]
capnpc = "0.18"

[lib]
name = "cachain"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
